[package]
name = "pc-controller"
version = "0.1.0"
edition = "2021"


[dependencies]
socketioxide.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
async-trait = "0.1"
dyn-clone = "1.0"
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34+deprecated"
sha2.workspace = true
rayon.workspace = true
circular-buffer.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
polars.workspace = true
