[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
axum.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
once_cell.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"] # Allows you to build both a shared library and a Rust library

[[bin]]
name = "metrics"
path = "src/main.rs"  # Points to the main.rs file